--- a/kafka/connectors/sqlserver.properties
+++ b/kafka/connectors/sqlserver.properties
@@ -10,12 +10,6 @@ database.dbname=testKafka
 database.history.kafka.bootstrap.servers=kafka:9092
 database.history.kafka.topic=dbhistory.Persons
 
-#curl -i -X POST -H "Accept:application/json" -H "Content-Type:application/json" http://localhost:8083/connectors/ -d '{"name": "msSqlConnector", "config": {"connector.class" : "io.debezium.connector.sqlserver.SqlServerConnector", "tasks.max" : "1", "database.server.name" : "sqlserver", "database.hostname" : "sqlserver", "database.port" : "1433", "database.user" : "sa", "database.password" : "r00t.R00T", "database.dbname" : "testKafka", "database.history.kafka.bootstrap.servers" : "kafka:9092", "database.history.kafka.topic": "schema-changes.db"}}'
 
-# connector.class=io.confluent.connect.cdc.mssql.MsSqlSourceConnector
-# tasks.max=1
-# initial.database=testKafka
-# username=sa
-# password=r00t.R00T
-# server.name=sqlserver
-# server.port=1433
+#TODO
+#https://www.youtube.com/watch?v=Kqvjjlx0fR4
