--- a/kafka/connectors/postgresql-sink-sqlserver.properties
+++ b/kafka/connectors/postgresql-sink-sqlserver.properties
@@ -1,13 +1,18 @@
-name=postgresql-sink-from-sqlserver
-connector.class=io.confluent.connect.jdbc.JdbcSinkConnector
-task.max=1
-topics=sqlserver.testKafka.Persons
-connection.url=jdbc:postgresql://postgres:5432
-connection.user=postgres
-connection.password=postgres
-topics=Persons
-key.converter=org.apache.kafka.connect.json.JsonConverter
-key.converter.schema.registry.url=http://localhost:8081
-value.converter=io.confluent.connect.avro.AvroConverter
-value.converter.schema.registry.url=http://localhost:8081
+name = sinkPostgresFromSqlServer
+connector.class = io.confluent.connect.jdbc.JdbcSinkConnector
+tasks.max = 1
+topics = sqlserver.dbo.Persons
+connection.url = jdbc:postgresql://postgres:5432/postgres
+connection.user = postgres
+connection.password = postgres
+dialect.name = PostgreSqlDatabaseDialect
+value.converter=org.apache.kafka.connect.json.JsonConverter
+value.converter.schemas.enable=true
+transforms=extractValue
+transforms.extractValue.type=org.apache.kafka.connect.transforms.ExtractField$Value
+transforms.extractValue.field=after
 auto.create=true
+auto.evolve=true
+insert.mode=insert
+pk.mode=none
+table.name.format=public.Persons
